; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_pred.c_Pred1ResetInput.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_pred.c_Pred1ResetInput.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pred1_state = type { i32, i64 }

@LogCCP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"Predictor1: Input channel reset\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @Pred1ResetInput to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Pred1ResetInput(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.pred1_state*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.pred1_state*
  store %struct.pred1_state* %5, %struct.pred1_state** %3, align 8
  %6 = load %struct.pred1_state*, %struct.pred1_state** %3, align 8
  %7 = getelementptr inbounds %struct.pred1_state, %struct.pred1_state* %6, i32 0, i32 1
  store i64 0, i64* %7, align 8
  %8 = load %struct.pred1_state*, %struct.pred1_state** %3, align 8
  %9 = getelementptr inbounds %struct.pred1_state, %struct.pred1_state* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = call i32 @memset(i32 %10, i8 signext 0, i32 4)
  %12 = load i32, i32* @LogCCP, align 4
  %13 = call i32 @log_Printf(i32 %12, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @memset(i32, i8 signext, i32) #1

declare dso_local i32 @log_Printf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
